feat: update RPA platform implementation and deployment