@@ -1,8 +1,14 @@
 package com.rpa.management.service;
 
+import com.alibaba.fastjson2.JSON;
+import com.alibaba.fastjson2.JSONArray;
+import com.alibaba.fastjson2.JSONObject;
+import com.rpa.management.dto.CreateCrawlTaskRequest;
 import com.rpa.management.dto.TaskDTO;
 import com.rpa.management.engine.RobotExecutor;
+import com.rpa.management.entity.Robot;
 import com.rpa.management.entity.Task;
+import com.rpa.management.repository.RobotRepository;
 import com.rpa.management.repository.TaskRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -29,19 +35,18 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class TaskService {
-    
+
     private final TaskRepository taskRepository;
+    private final RobotRepository robotRepository;
     private final RobotExecutor robotExecutor;
-    
-    /**
-     * 创建任务
-     */
+    private final CrawlResultService crawlResultService;
+
     @Transactional
     public TaskDTO createTask(TaskDTO dto, Long userId, String userName) {
         Task task = new Task();
         task.setTaskId(generateTaskId());
         task.setName(dto.getName());
-        task.setType(dto.getType());
+        task.setType(StringUtils.hasText(dto.getType()) ? dto.getType() : "default");
         task.setStatus("pending");
         task.setProgress(0);
         task.setRobotId(dto.getRobotId());
@@ -52,26 +57,51 @@ public class TaskService {
         task.setUserId(userId);
         task.setUserName(userName);
         task.setDescription(dto.getDescription());
-        
+        task.setParams(dto.getParams());
         task = taskRepository.save(task);
-        log.info("创建任务成功: {}", task.getTaskId());
-        
         return toDTO(task);
     }
-    
-    /**
-     * 更新任务
-     */
+
+    @Transactional
+    public TaskDTO createCrawlTask(CreateCrawlTaskRequest request, Long userId, String userName) {
+        Robot robot = robotRepository.findById(request.getRobotId())
+                .orElseThrow(() -> new RuntimeException("数据采集机器人不存在: " + request.getRobotId()));
+
+        if (!"data_collector".equals(robot.getType())) {
+            throw new RuntimeException("请选择数据采集机器人执行真实网站抓取");
+        }
+
+        Task task = new Task();
+        task.setTaskId(generateTaskId());
+        task.setName(request.getName());
+        task.setType("data-collection");
+        task.setStatus("pending");
+        task.setProgress(0);
+        task.setRobotId(robot.getId());
+        task.setRobotName(robot.getName());
+        task.setPriority("medium");
+        task.setExecuteType(StringUtils.hasText(request.getExecuteType()) ? request.getExecuteType() : "immediate");
+        task.setScheduledTime(request.getScheduledTime());
+        task.setUserId(userId);
+        task.setUserName(userName);
+        task.setDescription(StringUtils.hasText(request.getDescription()) ? request.getDescription() : "真实网站采集任务");
+        task.setParams(buildCrawlParams(request));
+
+        task = taskRepository.save(task);
+        log.info("Created crawl task {} for {}", task.getTaskId(), request.getUrl());
+
+        return toDTO(task);
+    }
+
     @Transactional
     public TaskDTO updateTask(Long id, TaskDTO dto) {
         Task task = taskRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("任务不存在: " + id));
-        
-        // 只有等待中的任务可以编辑
+
         if (!"pending".equals(task.getStatus())) {
-            throw new RuntimeException("只有等待中的任务可以编辑");
+            throw new RuntimeException("只有待执行任务可以编辑");
         }
-        
+
         task.setName(dto.getName());
         task.setType(dto.getType());
         task.setRobotId(dto.getRobotId());
@@ -80,192 +110,150 @@ public class TaskService {
         task.setExecuteType(dto.getExecuteType());
         task.setScheduledTime(dto.getScheduledTime());
         task.setDescription(dto.getDescription());
-        
+        task.setParams(dto.getParams());
         task = taskRepository.save(task);
-        log.info("更新任务成功: {}", task.getTaskId());
-        
         return toDTO(task);
     }
-    
-    /**
-     * 删除任务
-     */
+
     @Transactional
     public void deleteTask(Long id) {
         Task task = taskRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("任务不存在: " + id));
-        
-        // 执行中的任务不能删除
+
         if ("running".equals(task.getStatus())) {
             throw new RuntimeException("执行中的任务不能删除");
         }
-        
-        taskRepository.deleteById(id);
-        log.info("删除任务成功: {}", task.getTaskId());
+
+        if (StringUtils.hasText(task.getTaskId())) {
+            crawlResultService.deleteByTaskId(task.getTaskId());
+        }
+        taskRepository.delete(task);
     }
-    
-    /**
-     * 批量删除任务
-     */
+
     @Transactional
     public void deleteTasks(List<Long> ids) {
         List<Task> tasks = taskRepository.findAllById(ids);
-        
-        // 检查是否有执行中的任务
         List<Task> runningTasks = tasks.stream()
-                .filter(t -> "running".equals(t.getStatus()))
-                .collect(Collectors.toList());
-        
+                .filter(task -> "running".equals(task.getStatus()))
+                .toList();
         if (!runningTasks.isEmpty()) {
-            throw new RuntimeException("执行中的任务不能删除: " + 
-                    runningTasks.stream().map(Task::getTaskId).collect(Collectors.joining(", ")));
+            throw new RuntimeException("执行中的任务不能删除");
         }
-        
-        taskRepository.deleteAllById(ids);
-        log.info("批量删除任务成功, 数量: {}", ids.size());
+
+        tasks.stream()
+                .map(Task::getTaskId)
+                .filter(StringUtils::hasText)
+                .forEach(crawlResultService::deleteByTaskId);
+        taskRepository.deleteAll(tasks);
     }
-    
-    /**
-     * 根据ID查询任务
-     */
+
     public TaskDTO getTaskById(Long id) {
         Task task = taskRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("任务不存在: " + id));
         return toDTO(task);
     }
-    
-    /**
-     * 分页查询任务
-     */
-    public Page<TaskDTO> getTasksByPage(String name, String type, String status, 
-                                         String priority, Long userId, Long robotId,
-                                         LocalDateTime startTime, LocalDateTime endTime,
-                                         int page, int size) {
-        Pageable pageable = PageRequest.of(page - 1, size, Sort.by("createTime").descending());
-        Page<Task> taskPage = taskRepository.findByConditions(name, type, status, priority, userId, robotId, startTime, endTime, pageable);
-        return taskPage.map(this::toDTO);
+
+    public Page<TaskDTO> getTasksByPage(String name, String type, String status,
+                                        String priority, Long userId, Long robotId,
+                                        LocalDateTime startTime, LocalDateTime endTime,
+                                        int page, int size) {
+        Pageable pageable = PageRequest.of(Math.max(0, page - 1), Math.max(1, size), Sort.by("createTime").descending());
+        return taskRepository.findByConditions(
+                emptyToNull(name),
+                emptyToNull(type),
+                emptyToNull(status),
+                emptyToNull(priority),
+                userId,
+                robotId,
+                startTime,
+                endTime,
+                pageable
+        ).map(this::toDTO);
     }
-    
-    /**
-     * 查询所有任务
-     */
+
     public List<TaskDTO> getAllTasks() {
-        return taskRepository.findAll(Sort.by("createTime").descending()).stream()
+        return taskRepository.findAll(Sort.by("createTime").descending())
+                .stream()
                 .map(this::toDTO)
                 .collect(Collectors.toList());
     }
-    
-    /**
-     * 查询用户的任务
-     */
+
     public List<TaskDTO> getTasksByUserId(Long userId) {
-        return taskRepository.findByUserIdOrderByCreateTimeDesc(userId).stream()
+        return taskRepository.findByUserIdOrderByCreateTimeDesc(userId)
+                .stream()
                 .map(this::toDTO)
                 .collect(Collectors.toList());
     }
-    
-    /**
-     * 启动任务
-     */
+
     @Transactional
     public TaskDTO startTask(Long id) {
         Task task = taskRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("任务不存在: " + id));
-        
+
         if (!"pending".equals(task.getStatus())) {
-            throw new RuntimeException("只有等待中的任务可以启动");
+            throw new RuntimeException("只有待执行任务可以启动");
         }
-        
+
         task.setStatus("running");
         task.setStartTime(LocalDateTime.now());
         task.setProgress(0);
-        
         task = taskRepository.save(task);
-        log.info("启动任务成功: {}", task.getTaskId());
-        
-        // 异步执行任务
+
         robotExecutor.executeTaskAsync(id);
-        
         return toDTO(task);
     }
-    
-    /**
-     * 停止任务
-     */
+
     @Transactional
     public TaskDTO stopTask(Long id) {
         Task task = taskRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("任务不存在: " + id));
-        
+
         if (!"running".equals(task.getStatus())) {
             throw new RuntimeException("只有执行中的任务可以停止");
         }
-        
+
         task.setStatus("pending");
         task.setEndTime(LocalDateTime.now());
-        
         task = taskRepository.save(task);
-        log.info("停止任务成功: {}", task.getTaskId());
-        
         return toDTO(task);
     }
-    
-    /**
-     * 完成任务
-     */
+
     @Transactional
     public TaskDTO completeTask(Long id, String result) {
         Task task = taskRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("任务不存在: " + id));
-        
+
         task.setStatus("completed");
         task.setProgress(100);
         task.setEndTime(LocalDateTime.now());
         task.setResult(result);
         task.setDuration(calculateDuration(task.getStartTime(), task.getEndTime()));
-        
         task = taskRepository.save(task);
-        log.info("完成任务成功: {}", task.getTaskId());
-        
         return toDTO(task);
     }
-    
-    /**
-     * 任务失败
-     */
+
     @Transactional
     public TaskDTO failTask(Long id, String errorMessage) {
         Task task = taskRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("任务不存在: " + id));
-        
+
         task.setStatus("failed");
         task.setEndTime(LocalDateTime.now());
         task.setErrorMessage(errorMessage);
         task.setDuration(calculateDuration(task.getStartTime(), task.getEndTime()));
-        
         task = taskRepository.save(task);
-        log.info("任务标记失败: {}", task.getTaskId());
-        
         return toDTO(task);
     }
-    
-    /**
-     * 更新任务进度
-     */
+
     @Transactional
     public TaskDTO updateProgress(Long id, Integer progress) {
         Task task = taskRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("任务不存在: " + id));
-        
         task.setProgress(Math.min(100, Math.max(0, progress)));
-        
         task = taskRepository.save(task);
         return toDTO(task);
     }
-    
-    /**
-     * 获取任务统计数据
-     */
+
     public TaskStats getTaskStats() {
         TaskStats stats = new TaskStats();
         stats.setTotal(taskRepository.countAll());
@@ -273,32 +261,73 @@ public class TaskService {
         stats.setCompleted(taskRepository.countCompleted());
         stats.setFailed(taskRepository.countFailed());
         stats.setPending(stats.getTotal() - stats.getRunning() - stats.getCompleted() - stats.getFailed());
+
+        List<Task> completedTasks = taskRepository.findByStatus("completed");
+        int avgDuration = (int) completedTasks.stream()
+                .map(Task::getDuration)
+                .filter(duration -> duration != null && duration > 0)
+                .mapToInt(Integer::intValue)
+                .average()
+                .orElse(0);
+        stats.setAvgDuration(avgDuration);
         return stats;
     }
-    
-    /**
-     * 生成任务编号
-     */
+
+    public List<TaskDTO> getRunningTasks(int limit) {
+        Pageable pageable = PageRequest.of(0, Math.max(1, limit), Sort.by(Sort.Direction.DESC, "startTime"));
+        return taskRepository.findByStatus("running", pageable)
+                .stream()
+                .map(this::toDTO)
+                .collect(Collectors.toList());
+    }
+
+    public Map<String, Object> getTaskExecutionDetail(Long taskId) {
+        Task task = taskRepository.findById(taskId)
+                .orElseThrow(() -> new RuntimeException("任务不存在: " + taskId));
+
+        Map<String, Object> detail = new HashMap<>();
+        detail.put("task", toDTO(task));
+        detail.put("executionHistory", List.of());
+        detail.put("logs", List.of());
+        return detail;
+    }
+
+    private String buildCrawlParams(CreateCrawlTaskRequest request) {
+        JSONObject params = new JSONObject();
+        params.put("url", request.getUrl());
+        params.put("timeout", request.getTimeout() != null ? request.getTimeout() : 30000);
+        if (request.getHeaders() != null && !request.getHeaders().isEmpty()) {
+            params.put("headers", request.getHeaders());
+        }
+        if (request.getCookies() != null && !request.getCookies().isEmpty()) {
+            params.put("cookies", request.getCookies());
+        }
+        if (request.getExtractionRules() != null && !request.getExtractionRules().isEmpty()) {
+            params.put("extractionRules", request.getExtractionRules());
+        }
+        if (request.getPagination() != null && request.getPagination().getMaxPages() != null
+                && request.getPagination().getMaxPages() > 1) {
+            params.put("pagination", request.getPagination());
+        }
+        return JSON.toJSONString(params);
+    }
+
     private String generateTaskId() {
         String timestamp = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMddHHmmss"));
         String random = UUID.randomUUID().toString().substring(0, 4).toUpperCase();
         return "T" + timestamp + random;
     }
-    
-    /**
-     * 计算执行耗时（秒）
-     */
+
     private Integer calculateDuration(LocalDateTime start, LocalDateTime end) {
         if (start == null || end == null) {
             return 0;
         }
         return (int) java.time.Duration.between(start, end).getSeconds();
     }
-    
-    /**
-     * 转换为DTO
-     */
+
     private TaskDTO toDTO(Task task) {
+        JSONObject params = parseParams(task.getParams());
+        JSONArray extractionRules = params != null ? params.getJSONArray("extractionRules") : null;
         return TaskDTO.builder()
                 .id(task.getId())
                 .taskId(task.getTaskId())
@@ -318,15 +347,45 @@ public class TaskService {
                 .userName(task.getUserName())
                 .description(task.getDescription())
                 .result(task.getResult())
+                .params(task.getParams())
                 .errorMessage(task.getErrorMessage())
                 .createTime(task.getCreateTime())
+                .taxId(task.getTaxId())
+                .enterpriseName(task.getEnterpriseName())
                 .updateTime(task.getUpdateTime())
+                .crawlUrl(params != null ? params.getString("url") : null)
+                .crawlTimeout(params != null ? params.getInteger("timeout") : null)
+                .hasHeaders(params != null && params.getJSONObject("headers") != null && !params.getJSONObject("headers").isEmpty())
+                .hasCookies(params != null && params.getJSONArray("cookies") != null && !params.getJSONArray("cookies").isEmpty())
+                .hasPagination(params != null && params.getJSONObject("pagination") != null)
+                .extractionRuleCount(extractionRules != null ? extractionRules.size() : 0)
+                .sourceTaskRecordId(params != null ? params.getLong("sourceTaskRecordId") : null)
+                .sourceTaskId(params != null ? params.getString("sourceTaskId") : null)
+                .sourceTaskName(params != null ? params.getString("sourceTaskName") : null)
+                .sourceTitle(params != null ? params.getString("sourceTitle") : null)
+                .sourceFinalUrl(params != null ? params.getString("sourceFinalUrl") : null)
+                .workflowId(params != null ? params.getLong("workflowId") : null)
+                .workflowName(params != null ? params.getString("workflowName") : null)
+                .query(params != null ? params.getString("query") : null)
                 .build();
     }
-    
-    /**
-     * 任务统计数据
-     */
+
+    private JSONObject parseParams(String raw) {
+        if (!StringUtils.hasText(raw)) {
+            return null;
+        }
+        try {
+            return JSON.parseObject(raw);
+        } catch (Exception ex) {
+            log.warn("Failed to parse task params for task {}", raw, ex);
+            return null;
+        }
+    }
+
+    private String emptyToNull(String value) {
+        return StringUtils.hasText(value) ? value : null;
+    }
+
     @lombok.Data
     public static class TaskStats {
         private Long total;
@@ -335,41 +394,5 @@ public class TaskService {
         private Long completed;
         private Long failed;
         private Integer avgDuration;
-    }
-    
-    /**
-     * 获取正在执行的任务列表
-     */
-    public List<TaskDTO> getRunningTasks(int limit) {
-        Pageable pageable = PageRequest.of(0, limit, Sort.by(Sort.Direction.DESC, "startTime"));
-        List<Task> tasks = taskRepository.findByStatus("running", pageable);
-        return tasks.stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
-    }
-    
-    /**
-     * 获取任务执行详情
-     */
-    public Map<String, Object> getTaskExecutionDetail(Long taskId) {
-        Task task = taskRepository.findById(taskId)
-                .orElseThrow(() -> new RuntimeException("任务不存在: " + taskId));
-        
-        Map<String, Object> detail = new HashMap<>();
-        detail.put("task", toDTO(task));
-        detail.put("executionHistory", getExecutionHistory(taskId));
-        detail.put("logs", getTaskLogs(taskId));
-        
-        return detail;
-    }
-    
-    private List<Map<String, Object>> getExecutionHistory(Long taskId) {
-        // TODO: 从数据库获取执行历史记录
-        return List.of();
-    }
-    
-    private List<Map<String, Object>> getTaskLogs(Long taskId) {
-        // TODO: 从ExecutionLogService获取日志
-        return List.of();
     }
 }
